welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: not found: value i
	setCouleurBrosse(T((i+decalage)%T.length))
                            ^